--- a/demos/interoperability/napari.ipynb
+++ b/demos/interoperability/napari.ipynb
@@ -1,33 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "603f3b39",
+   "metadata": {},
+   "source": [
+    "# Displaying Images in Napari"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "50b170a2-98e2-4257-b5af-9e008a264a83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
-       "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              535.216.01\n",
-       "\tDevice Type:                 GPU\n",
-       "\tCompute Units:               128\n",
-       "\tGlobal Memory Size:          24217 MB\n",
-       "\tMaximum Object Size:         6054 MB\n",
-       "\tMax Clock Frequency:         2625 MHz\n",
+       "(OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
+       "\tVendor:                      Intel(R) Corporation\n",
+       "\tDriver Version:              2024.18.12.0.05_160000\n",
+       "\tDevice Type:                 CPU\n",
+       "\tCompute Units:               32\n",
+       "\tGlobal Memory Size:          127926 MB\n",
+       "\tMaximum Object Size:         63963 MB\n",
+       "\tMax Clock Frequency:         0 MHz\n",
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import napari\n",
-    "import numpy as np\n",
+    "from skimage.io import imread\n",
     "import pyclesperanto as cle\n",
     "\n",
     "cle.select_device()"
@@ -43,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c5791a69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = np.random.randint(0, 65536, size=(1024, 1024), dtype=np.uint16)\n",
+    "img = imread('https://samples.fiji.sc/blobs.png').squeeze()\n",
     "blurred = cle.gaussian_blur(img, sigma_x=2, sigma_y=2)"
    ]
   },
@@ -62,15 +70,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "14da0d8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'blurred' at 0x7133c4d13b80>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "viewer = napari.Viewer()\n",
-    "viewer.add_image(img)\n",
-    "viewer.add_image(blurred)\n",
+    "viewer.add_image(img, name='original')\n",
+    "viewer.add_image(blurred, name='blurred')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1292bc56",
+   "metadata": {},
+   "source": [
+    "It is also possible to directly process layers from Napari as such:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8db8016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Labels layer 'thresholded' at 0x7133be158310>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "viewer.add_labels(cle.threshold_otsu(viewer.layers['original'].data), name='thresholded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d209e219",
+   "metadata": {},
+   "source": [
+    "Let's now check out Napari to see our three layers displayed in the viewer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e56c2884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "napari.run()"
    ]
   },
@@ -81,17 +146,11 @@
    "source": [
     "Enjoy!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5fd04493",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skbe",
+   "display_name": "zarr-napari-env",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
