--- a/demos/examples/fft_operations_clfft.ipynb
+++ b/demos/examples/fft_operations_clfft.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "515cc432-9562-43f1-b010-97796e362131",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "fft_arr = cle.__experimental__.fft(arr, None)\n",
+    "fft_arr = cle.__experimental__.cl_fft(arr, None)\n",
     "fft_arr"
    ]
   },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f043771b-b71b-458f-bb24-e78ff654195f",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
    ],
    "source": [
     "new_arr = cle.create_like(arr)\n",
-    "cle.__experimental__.ifft(fft_arr, new_arr)\n",
+    "cle.__experimental__.cl_ifft(fft_arr, new_arr)\n",
     "new_arr"
    ]
   },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ef527c2f-20aa-4d43-a0f2-68ac851e3fee",
    "metadata": {},
    "outputs": [
@@ -660,13 +660,13 @@
     }
    ],
    "source": [
-    "fft_image = cle.__experimental__.fft(image, None)\n",
+    "fft_image = cle.__experimental__.cl_fft(image, None)\n",
     "fft_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b52061a3-795f-4352-a0ca-a73138debcac",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
    ],
    "source": [
     "new_image = cle.create_like(image)\n",
-    "cle.__experimental__.ifft(fft_image, new_image)\n",
+    "cle.__experimental__.cl_ifft(fft_image, new_image)\n",
     "new_image"
    ]
   },
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fcd50465-6800-4c0e-8610-584307c417f0",
    "metadata": {},
    "outputs": [
@@ -1092,13 +1092,13 @@
     }
    ],
    "source": [
-    "fft_image = cle.__experimental__.fft(image, None)\n",
+    "fft_image = cle.__experimental__.cl_fft(image, None)\n",
     "fft_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e44b53be-2757-4e9b-b580-f617aa2583e8",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1233,7 @@
    ],
    "source": [
     "new_image = cle.create_like(image)\n",
-    "cle.__experimental__.ifft(fft_image, new_image)\n",
+    "cle.__experimental__.cl_ifft(fft_image, new_image)\n",
     "new_image"
    ]
   }
