--- a/demos/examples/fft_operations_clfft.ipynb
+++ b/demos/examples/fft_operations_clfft.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "515cc432-9562-43f1-b010-97796e362131",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f043771b-b71b-458f-bb24-e78ff654195f",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ef527c2f-20aa-4d43-a0f2-68ac851e3fee",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b52061a3-795f-4352-a0ca-a73138debcac",
    "metadata": {},
    "outputs": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fcd50465-6800-4c0e-8610-584307c417f0",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e44b53be-2757-4e9b-b580-f617aa2583e8",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skbe",
    "language": "python",
    "name": "python3"
   },
