fix and update PR

--- a/demos/examples/clahe_intensity_correction.ipynb
+++ b/demos/examples/clahe_intensity_correction.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b55cab28-6f96-4d14-a782-5c5422b00283",
    "metadata": {},
    "outputs": [
@@ -138,17 +138,17 @@
     }
    ],
    "source": [
-    "cle.__experimental__.clahe?"
+    "cle.clahe?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c5322763-2090-411e-ae8c-33a8463cabd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_gpu = cle.__experimental__.clahe(raw, tile_size=8, clip_limit=0.01)"
+    "results_gpu = cle.clahe(raw, tile_size=8, clip_limit=0.01)"
    ]
   },
   {
