--- a/demos/examples/multi-gpu_tile_processing_with_dask.ipynb
+++ b/demos/examples/multi-gpu_tile_processing_with_dask.ipynb
@@ -59,10 +59,8 @@
    "source": [
     "image = io.imread(\"https://github.com/StRigaud/clesperanto_workshop_I2K24/raw/refs/heads/main/data/P1_H_C3H_M004_17-cropped.tif\")[1] # we only want 1 channel\n",
     "\n",
-    "# for testing purposes, we crop the image even more.\n",
-    "# comment out the following line to run on the whole 5000x2000 pixels\n",
-    "# image = image[1000:1500, 1000:1500]\n",
-    "# image = image[1000:1500, 1000:1500]\n",
+    "# for testing purposes, we crop the image even more. Comment the next line to run on the whole 5000x2000 pixels\n",
+    "image = image[1000:1500, 1000:1500]\n",
     "\n",
     "#compress AND change the numpy array into a zarr array\n",
     "compressor = Blosc(cname='zstd', clevel=3, shuffle=Blosc.BITSHUFFLE)\n",
@@ -365,10 +363,6 @@
     "    if (cle.maximum_of_all_pixels(gpu_image) - cle.minimum_of_all_pixels(gpu_image)) < 128:\n",
     "        return np.asarray([[0]])\n",
     "    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
     "    labels = cle.voronoi_otsu_labeling(gpu_image, spot_sigma=3.5)\n",
     "    nuclei_count = labels.max()\n",
     "    \n",
@@ -753,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
