--- a/demos/examples/template_matching.ipynb
+++ b/demos/examples/template_matching.ipynb
@@ -378,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skbe",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
