update notebook and pixi

--- a/demos/examples/segmentation_3d.ipynb
+++ b/demos/examples/segmentation_3d.ipynb
@@ -334,8 +334,8 @@
     }
    ],
    "source": [
-    "backgrund_subtracted = cle.top_hat_box(equalized_intensities_stack, radius_x=5, radius_y=5, radius_z=5)\n",
-    "show(backgrund_subtracted)"
+    "background_subtracted = cle.top_hat_box(equalized_intensities_stack, radius_x=5, radius_y=5, radius_z=5)\n",
+    "show(background_subtracted)"
    ]
   },
   {
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "segmented = cle.voronoi_otsu_labeling(backgrund_subtracted, spot_sigma=3, outline_sigma=1)\n",
+    "segmented = cle.voronoi_otsu_labeling(background_subtracted, spot_sigma=3, outline_sigma=1)\n",
     "show(segmented, labels=True)"
    ]
   },
