--- a/demos/examples/voronoi_otsu_labeling.ipynb
+++ b/demos/examples/voronoi_otsu_labeling.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "cle.select_device()\n",
     "\n",
-    "image = imread(\"../data/BBBC022/IXMtest_A02_s9.tif\")[:,:,0]\n"
+    "image = imread(\"../data/BBBC022/IXMtest_A02_s9.tif\")[:,:,0]"
    ]
   },
   {
