--- a/demos/examples/thresholding.ipynb
+++ b/demos/examples/thresholding.ipynb
@@ -349,7 +349,13 @@
    "id": "35c563de-36b2-4169-8649-0b0d7533e4b3",
    "metadata": {},
    "source": [
-    "Once satisfied with the segmentation, we can move on to quantification and analysis of the segmented objects."
+    "Once satisfied with the segmentation, we can move on to quantification and analysis of the segmented objects.\n",
+    "\n",
+    "## Alternative automatic thresholding\n",
+    "\n",
+    "Several other algorithm for automatic thresholding based on the image histogram exist. `Yen`, `Triangle`, `IsoData`, etc. that are available in Fiji or scikit-image. \n",
+    "\n",
+    "Pyclesperanto propose the `Otsu` and `Yen` implementation. If other aproach would be usefull for you, do not hesitate to request it!"
    ]
   }
  ],
